--- a/_posts/2019-07-13-the-us-narrative-today.html
+++ b/_posts/2019-07-13-the-us-narrative-today.html
@@ -2605,107 +2605,107 @@ stories:
   domain: http://www.headlightherald.com/
   link: https://headlightherald.com/2019/07/03/knee-high-slowly-but-surely/
 images:
-- name: san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-three.jpg
-- name: school-clouds-church-clouds-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-color.jpg
-- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
-- name: oldtrain-oldtrain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
-- name: birdhouse-birdhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-cinnamon-rolls.jpg
-- name: hollywood-building-hollywood-building-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-dys-1.jpg
-- name: nazi-invasion-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7054.jpg
-- name: carry-load-carryload-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
-- name: oldhousecars-house-old-cars-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-nazi-poster.jpg
-- name: store-on-corner-store-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-really-hot.jpg
-- name: meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-4.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
-- name: aws-s3-stories-new-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
-- name: school-clouds-church-clouds-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-rainbow-festival.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-- name: white-house-lawn-white-house-lawn-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dry-skin.jpg
-- name: supreme-court-supremecourt-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
-- name: art-museum-art-museum-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-rain.jpg
-- name: bordercrossing-bordercrossing-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
-- name: meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
-- name: old-door-lock-old-door-lock-2-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-umberto-bocc.jpg
-- name: trucksilo-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
-- name: border-crossing-bordercrossing-internet-numbers.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-internet-numbers.png
-- name: adam-smith-adam-smith-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crunch-paper.jpg
-- name: amusement-park-amusement-park-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kand-two.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-- name: status-berlin-status-berlin-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-electricity.jpg
-- name: oldhouse-oldhouse-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
-- name: christianity-christianity-under-construction-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-blocks.jpg
-- name: server-cloud-server-racks-clouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-wols.jpg
-- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
-- name: store-on-corner-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sand-paper.jpg
-- name: oldhousecars-house-old-cars-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-clean-view.jpg
-- name: ellis-island-ellisisland-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
-- name: locked-up-steam-lock-up-steam-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-pablo-blue.jpg
-- name: aws-s3-stories-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-dark-dali.jpg
-- name: gypsymosaic-gypsy-eyes-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-granite.jpg
-- name: subway-subway-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-missle.jpg
-- name: machine-road-machine-road-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-matrix.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-- name: crow_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
-- name: aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit.png
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-- name: stories-DSC-0067-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-DSC-0067-alberto-giacometti.JPG
-- name: aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
+- name: yosemite-yosemite-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-granite.jpg
+- name: berlinwall-DSC-0084-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-diego-rivera1.jpg
+- name: curtain-curtain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
+- name: paris-paris-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crabapple.jpg
+- name: birdhouse-birdhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-smoking-cigarette.jpg
+- name: server-cloud-server-racks-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-blocks.jpg
+- name: mosaic-face-mosaic-face-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-nazi-poster.jpg
+- name: school-clouds-church-clouds-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-really-hot.jpg
+- name: border-fence-border-fence-on-hill-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-spagetti-accident.jpg
+- name: supreme-court-supremecourt-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-rainbow-festival.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: old-granary-field-oldhouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse.jpg
+- name: white-house-lawn-white-house-window-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-brush.jpg
+- name: castle-wall-DSC-0067-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-ww2-dresden.JPG
+- name: oldbarn-oldbarn-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-creativity.jpg
+- name: birdhouse-birdhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
+- name: crow-crow-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-spagetti-accident.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+- name: old-barn-old-barn-1500-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purp-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+- name: birdhouse-birdhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
+- name: gypsy-wagon-gypsywagon-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
+- name: old-gas-pumps-oldgaspumps-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
+- name: walled-garden-walled-garden-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-electricity.jpg
+- name: old-barn-old-barn-1500-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-pond.jpg
+- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
+- name: status-berlin-status-berlin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-green-zuma.jpg
+- name: old-granary-field-granaryfield-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
+- name: eduardo-eduardo-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-sunday.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-post-modern.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: blossombar-hot-spicy-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-50-62.jpg
+- name: mistywoods-babyfoot-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-hot-spicy.jpg
+- name: border-fence-border-fence-on-hill-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-missle.jpg
+- name: oldhousecars-house-old-cars-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-yellow-paper.jpg
+- name: subway-subway-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-aqua.jpg
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: old-granary-field-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
+- name: flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+- name: rockingchair-rockingchair-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-umberto-bocc.jpg
+- name: razorwire-DSC-0080-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-graham-sutherland.jpg
+- name: rockingchair-face-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-circuit.jpg
+- name: oldhouse-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
+- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
+- name: stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: razorwire-DSC-0080-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-three.jpg
+- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
+- name: white-house-lawn-white-house-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
+- name: powerlines-power-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dry-skin.jpg
+- name: old-door-lock-old-door-lock-2-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-paper.jpg
+- name: border-fence-border-fence-on-hill-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kand-two.jpg
 ---
 Zabiegi Na Cellulit Wojkowice.&nbsp;First Moon Landing Log Book, Tapes, At Auction.&nbsp;Register For The Mack Brown Youth Football Clinic Today.&nbsp;Groundbreaking For New Hotel Downtown.&nbsp;Toxic Lake In Russia's Siberia Becomes Selfie Sensation.&nbsp;Avoiding Common Driving Dangers.&nbsp;Camila Cabello 'looked Flirty' During Date.&nbsp;Philadelphia Police Denounce 'street Justice'.&nbsp;
